--- a/.env
+++ b/.env
@@ -24,4 +24,14 @@ ACCESS_TOKEN_EXPIRE_MINUTES = 60
 KAFKA_SERVER = localhost:9092
 
 # SMS-OTP
-ACCESS_TOKEN_SPEEDSMS = "zlbjIAs3WMfDEJJW-3UCMjIJY4ZoxvaW"
+ACCESS_TOKEN_SPEEDSMS = zlbjIAs3WMfDEJJW-3UCMjIJY4ZoxvaW
+
+
+# DATABASE
+
+PROJECT_NAME = e-commerce
+POSTGRES_SERVER = dpg-d0i4meumcj7s739ms2e0-a.singapore-postgres.render.com
+POSTGRES_PORT = 5432  
+POSTGRES_USER = admin
+POSTGRES_PASSWORD = gbmT2OAM5Ete2v0SHBh8Jt68NWd65q1Z
+POSTGRES_DB = shopee_project
