14th-commit-Finish implementing the Gmail,Facebook login API

--- a/.env
+++ b/.env
@@ -28,10 +28,12 @@ ACCESS_TOKEN_SPEEDSMS = zlbjIAs3WMfDEJJW-3UCMjIJY4ZoxvaW
 
 
 # DATABASE
+# PROJECT_NAME = e-commerce
+# POSTGRES_SERVER = dpg-d0i4meumcj7s739ms2e0-a.singapore-postgres.render.com
+# POSTGRES_PORT = 5432  
+# POSTGRES_USER = admin
+# POSTGRES_PASSWORD = gbmT2OAM5Ete2v0SHBh8Jt68NWd65q1Z
+# POSTGRES_DB = shopee_project
 
-PROJECT_NAME = e-commerce
-POSTGRES_SERVER = dpg-d0i4meumcj7s739ms2e0-a.singapore-postgres.render.com
-POSTGRES_PORT = 5432  
-POSTGRES_USER = admin
-POSTGRES_PASSWORD = gbmT2OAM5Ete2v0SHBh8Jt68NWd65q1Z
-POSTGRES_DB = shopee_project
+# GOOGLE_CLIENT
+GOOGLE_CLIENT_ID= 539137712978-9r1c7icj8pff75sdqevs42ibojrctuoq.apps.googleusercontent.com
