--- a/.env
+++ b/.env
@@ -31,21 +31,20 @@ ACCESS_TOKEN_SPEEDSMS = zlbjIAs3WMfDEJJW-3UCMjIJY4ZoxvaW
 DOMAIN = https://be-shopee-project.onrender.com
 
 # DATABASE
-# PROJECT_NAME = e-commerce
-# POSTGRES_SERVER = dpg-d0i4meumcj7s739ms2e0-a.singapore-postgres.render.com
-# POSTGRES_PORT = 5432  
-# POSTGRES_USER = admin
-# POSTGRES_PASSWORD = gbmT2OAM5Ete2v0SHBh8Jt68NWd65q1Z
-# POSTGRES_DB = shopee_project
-
-
 PROJECT_NAME = e-commerce
-POSTGRES_SERVER = localhost
+POSTGRES_SERVER = dpg-d0i4meumcj7s739ms2e0-a.singapore-postgres.render.com
 POSTGRES_PORT = 5432  
-POSTGRES_USER = postgres
-POSTGRES_PASSWORD = postgres
-# POSTGRES_DB = shopeeDB
-POSTGRES_DB = testalembic
+POSTGRES_USER = admin
+POSTGRES_PASSWORD = gbmT2OAM5Ete2v0SHBh8Jt68NWd65q1Z
+POSTGRES_DB = shopee_project
+
+
+# PROJECT_NAME = e-commerce
+# POSTGRES_SERVER = localhost
+# POSTGRES_PORT = 5432  
+# POSTGRES_USER = postgres
+# POSTGRES_PASSWORD = postgres
+# POSTGRES_DB = testalembic
 
 
 
@@ -54,4 +53,5 @@ GOOGLE_CLIENT_ID= 539137712978-9r1c7icj8pff75sdqevs42ibojrctuoq.apps.googleuserc
 
 
 
-# BACKEND_CORS_ORIGINS
+#SUPERSET
+SUPERSET_DOMAIN = http://localhost:8088
