Complete the WebSocket design on the backend

--- a/.env
+++ b/.env
@@ -32,11 +32,11 @@ DOMAIN = https://be-shopee-project.onrender.com
 
 # DATABASE
 PROJECT_NAME = e-commerce
-POSTGRES_SERVER = dpg-d0i4meumcj7s739ms2e0-a.singapore-postgres.render.com
+POSTGRES_SERVER = dpg-d1dvdgvgi27c73es98eg-a.singapore-postgres.render.com
 POSTGRES_PORT = 5432  
-POSTGRES_USER = admin
-POSTGRES_PASSWORD = gbmT2OAM5Ete2v0SHBh8Jt68NWd65q1Z
-POSTGRES_DB = shopee_project
+POSTGRES_USER = shopee_project_database_user
+POSTGRES_PASSWORD = qPn9HgQDMoIsVCFOeQsqurpAll8skocx
+POSTGRES_DB = shopee_project_database
 
 
 # PROJECT_NAME = e-commerce
