--- a/.env
+++ b/.env
@@ -28,7 +28,7 @@ ACCESS_TOKEN_SPEEDSMS = zlbjIAs3WMfDEJJW-3UCMjIJY4ZoxvaW
 
 
 #BACKEND
-DOMAIN = https://be-shopee-project.onrender.com
+# DOMAIN = https://be-shopee-project.onrender.com
 
 # DATABASE
 PROJECT_NAME = e-commerce
