--- a/.env
+++ b/.env
@@ -28,15 +28,15 @@ ACCESS_TOKEN_SPEEDSMS = zlbjIAs3WMfDEJJW-3UCMjIJY4ZoxvaW
 
 
 #BACKEND
-# DOMAIN = https://be-shopee-project.onrender.com
+DOMAIN = https://be-shopee-project.onrender.com
 
 # DATABASE
 PROJECT_NAME = e-commerce
-POSTGRES_SERVER = dpg-d1dvdgvgi27c73es98eg-a.singapore-postgres.render.com
+POSTGRES_SERVER = dpg-d204267gi27c73c595eg-a.singapore-postgres.render.com
 POSTGRES_PORT = 5432  
-POSTGRES_USER = shopee_project_database_user
-POSTGRES_PASSWORD = qPn9HgQDMoIsVCFOeQsqurpAll8skocx
-POSTGRES_DB = shopee_project_database
+POSTGRES_USER = admin
+POSTGRES_PASSWORD = d6eSIZdR10RwUijT8hRJ8HE8TPtYDpOy
+POSTGRES_DB = backend_database_gfgc
 
 
 # PROJECT_NAME = e-commerce
