--- a/.env
+++ b/.env
@@ -37,7 +37,7 @@ POSTGRES_PORT = 5432
 POSTGRES_USER = admin
 POSTGRES_PASSWORD = d6eSIZdR10RwUijT8hRJ8HE8TPtYDpOy
 POSTGRES_DB = backend_database_gfgc
-
+POSTGRES_WAREHOUSE_DB = datawarehouse
 
 # PROJECT_NAME = e-commerce
 # POSTGRES_SERVER = localhost
