--- a/.env
+++ b/.env
@@ -32,19 +32,14 @@ DOMAIN = https://be-shopee-project.onrender.com
 
 # DATABASE
 PROJECT_NAME = e-commerce
-POSTGRES_SERVER = dpg-d204267gi27c73c595eg-a.singapore-postgres.render.com
+POSTGRES_SERVER = dpg-d2lg9cndiees73c0qbrg-a.singapore-postgres.render.com
 POSTGRES_PORT = 5432  
-POSTGRES_USER = admin
-POSTGRES_PASSWORD = d6eSIZdR10RwUijT8hRJ8HE8TPtYDpOy
-POSTGRES_DB = backend_database_gfgc
+POSTGRES_USER = be_database_user
+POSTGRES_PASSWORD = 8ZB4313uq0T8vniaSJMsIoLw3aM5RqHu
+POSTGRES_DB = be_database
 POSTGRES_WAREHOUSE_DB = datawarehouse
 
-# PROJECT_NAME = e-commerce
-# POSTGRES_SERVER = localhost
-# POSTGRES_PORT = 5432  
-# POSTGRES_USER = postgres
-# POSTGRES_PASSWORD = postgres
-# POSTGRES_DB = testalembic
+
 
 
 
